--- a/startbootstrap-agency-gh-pages/index.html
+++ b/startbootstrap-agency-gh-pages/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.png" alt="" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -42,44 +42,14 @@
             <div class="container">
                 <!--<div class="masthead-subheading">Welcome To Our Studio!</div>-->
                 <div class="masthead-heading text-uppercase">BG BOCADITOS</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </header>
-
-        <!--LA PARTE DEL CARRUSEL-->
-        <div id="ejemploCarousel" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-		<li data-target="#ejemploCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#ejemploCarousel" data-slide-to="1"></li>
-		<li data-target="#ejemploCarousel" data-slide-to="2"></li>
-	</ol>
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="header1" class="d-block w-100" alt="...">
-		</div>
-		<div class="carousel-item">
-			<img src="header2" class="d-block w-100" alt="...">
-		</div>
-		<div class="carousel-item">
-			<img src="header3" class="d-block w-100" alt="...">
-		</div>
-	</div>
-	<a class="carousel-control-prev" href="#ejemploCarousel" role="button" data-slide="prev">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		<span class="sr-only">Anterior</span>
-	</a>
-	<a class="carousel-control-next" href="#ejemploCarousel" role="button" data-slide="next">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		<span class="sr-only">Siguiente</span>
-	</a>
-</div>
 
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Nuestros productos</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -91,8 +61,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Pasteles</div>
+                                <div class="portfolio-caption-subheading text-muted">$15 - $60</div>
                             </div>
                         </div>
                     </div>
@@ -105,8 +75,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Cupcakes/Cakepops</div>
+                                <div class="portfolio-caption-subheading text-muted">$1.25 - $5</div>
                             </div>
                         </div>
                     </div>
@@ -119,64 +89,46 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Bocaditos</div>
+                                <div class="portfolio-caption-subheading text-muted">$12 - $25</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
-                            </div>
-                        </div>
+                    
+                </div>
+            </div>
+        </section>
+
+         <section class="page-section bg-primary" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">Tenemos todo lo que necesitas!</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-white-50 mb-4">Fusionamos arte con reposteria.Trabajamos con amor y lo mejor de todo es que es trabajo artesanal. En BGBocaditos contamos con pasteles y bocaditos para cada ocasion espacial. Cada cake es unico y esta preparado con ingredientes frescos y de alta calidad.</p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="page-section clearfix">
+    		<div class="container">
+      			<div class="intro">
+        			<img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.png" alt="">
+        			<div class="intro-text left-0 text-center bg-faded p-5 rounded">
+          				<p class="mb-3">I genuinely enjoy the process of making colourful, delicious food. But I do allow myself an occasional piece of chocolate - today I had a pastry. If I fancy something, I'll have it.
+          				</p>
+          				<h2 class="section-heading mb-4">
+           				<span class="section-heading-lower">Victoria Pendleton</span>
+          				</h2>
+        			</div>
+     			 </div>
+    		</div>
+  </section>
        
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
-                <!--<div class="text-center">
-                    <h2 class="section-heading text-uppercase">Registrarse</h2>
-                </div>
-            -->
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
@@ -195,7 +147,7 @@
                     </div>
                     <div class="text-center">
                         <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">ENVIAR</button>
+                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">REGISTRARSE!</button>
                     </div>
                 </form>
             </div>
