--- a/principal.html
+++ b/principal.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Tutoriales</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Quienes Somos</a></li>
