--- a/catalogo.html
+++ b/catalogo.html
@@ -38,7 +38,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Principal</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Catalogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Tutoriales</a></li>
