--- a/catalogo.html
+++ b/catalogo.html
@@ -51,7 +51,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">CATALOGO</div>
+                <div class="masthead-subheading">CATÁLOGO</div>
                
                
             </div>
