cambios en tutoriales y recetas

--- a/recetas.html
+++ b/recetas.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
+        <title>BGBocaditos</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.png" alt="" /></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -51,7 +51,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/relleno.png" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/relleno.png" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Relleno de chocolate para tortas caseras</div>
@@ -69,7 +69,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/manzana.jpg" />
+                                <img class="img-fluid" src="assets/img/recetas/manzana.jpg" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Pie de manzana casero</div>
@@ -86,7 +86,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/vainilla.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/vainilla.jpg" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Cake de vainilla</div>
@@ -103,7 +103,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/chocolate.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/chocolate.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Cake de chocolate</div>
@@ -120,7 +120,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/alfajor.png" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/alfajor.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Alfajores de maizena</div>
@@ -137,7 +137,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/tres_leches.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/tres_leches.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Dulce de tres leches</div>
@@ -154,7 +154,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/queso_leche.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/queso_leche.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Queso de leche</div>
@@ -169,7 +169,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/flan_coco.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/flan_coco.jpg" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Flan de coco</div>
@@ -184,7 +184,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="img/tarta_limon.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/tarta_limon.jpg" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Tarta de limon</div>
