cambio en carpeta recetas

--- a/recetas.html
+++ b/recetas.html
@@ -69,7 +69,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/manzana.jpg" />
+                                <img class="img-fluid" src="assets/img/recetas/manzana.png" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Pie de manzana casero</div>
@@ -86,7 +86,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/vainilla.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/vainilla.png" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Cake de vainilla</div>
@@ -103,7 +103,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/chocolate.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/chocolate.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Cake de chocolate</div>
@@ -137,7 +137,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/tres_leches.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/tres_leches.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Dulce de tres leches</div>
@@ -154,7 +154,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/queso_leche.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/recetas/queso_leche.png" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Queso de leche</div>
@@ -169,7 +169,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/flan_coco.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/flan_coco.png" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Flan de coco</div>
@@ -184,7 +184,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/recetas/tarta_limon.jpg" alt=""  />
+                                <img class="img-fluid" src="assets/img/recetas/tarta_limon.png" alt=""  />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Tarta de limon</div>
