Enlace entre paginas en la navBar

--- a/contacto.html
+++ b/contacto.html
@@ -27,12 +27,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#principal">PRINCIPAL</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#catalogo">CATALOGO</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#recetas">RECETAS</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#tutoriales">TUTORIALES</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#quienes_somos">QUIENES SOMOS</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contactanos">CONTACTANOS</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quienes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
                     </ul>
                 </div>
             </div>
