--- a/tutoriales.html
+++ b/tutoriales.html
@@ -26,12 +26,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Principal</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Catálogos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Recetas</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Tutoriales</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Quienes somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="principal.html">Principal</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quienes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
                     </ul>
                 </div>
             </div>
@@ -108,35 +108,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!--<div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
-                            </div>
-                        </div>
-                    </div>-->
                 </div>
             </div>
         </section>
