--- a/tutoriales.html
+++ b/tutoriales.html
@@ -112,6 +112,22 @@
             </div>
         </section>
 
+        <footer class="footer py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 text-lg-left"></div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/Susbocaditos" target="_BLANK"><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                    <div class="col-lg-4 text-lg-right">
+                        <a class="mr-3" href="#!"></a>
+                        <a href="#!"></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 
 
 
