--- a/quienessomos.html
+++ b/quienessomos.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -31,63 +33,85 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="catalogo.html">Catalogo</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="recetas.html">Recetas</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tutoriales.html">Tutoriales</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="quienessomos.html">Quienes Somos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contactanos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quienes Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contacto.html">Contactanos</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-    
-        <!-- Contact-->
-        <section class="page-section" id="contact">
+        <!-- Masthead-->
+        <header class="masthead-1">
+            <div class="container">
+
+            </div>
+        </header>
+
+        <!-- About-->
+        <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contactanos</h2>
-                    <h3 class="section-subheading text-muted-1">Para alguna cotización o pedido ¡No dudes en escribirnos!</h3>
+                    <h2 class="section-heading text-uppercase">Quiénes somos</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Nombre *" required="required" data-validation-required-message="Porfavor ingrese su nombre." />
-                                <p class="help-block text-danger"></p>
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/catalogo.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="subheading">Catálogo</h4>
                             </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Email *" required="required" data-validation-required-message="Porfavor ingrese su email." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <input class="form-control" id="phone" type="tel" placeholder="Teléfono *" required="required" data-validation-required-message="Porfavor ingrese su número de teléfono." />
-                                <p class="help-block text-danger"></p>
-                            </div>
+                            <div class="timeline-body"><p class="text-muted">¡Dale un vistazo al catalogo de lo que tenemos para ti!</p></div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <textarea class="form-control" id="message" placeholder="Mensaje *" required="required" data-validation-required-message="Porfavor ingrese su mensaje."></textarea>
-                                <p class="help-block text-danger"></p>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/recetas.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="subheading">Recetas</h4>
                             </div>
+                            <div class="timeline-body"><p class="text-muted">¡Aprenderás a realizar deliciosos bocaditos!</p></div>
                         </div>
-                    </div>
-                    <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Submit</button>
-                    </div>
-                </form>
+                    </li>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/tutoriales.png" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="subheading">Tutoriales</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Aprenderás a realizar tus propias recetas viendo nuestros tutoriales.</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/contacto.png" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4 class="subheading">Sección de contacto</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Podrás ponerte en contacto con nostros en cualquier red social disponible en la sección <i>CONTACTANOS</i> o por vía correo electrónico.</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div id="timeline-end" class="timeline-image">
+                            <h4>
+                                <i>¡Disfruta 
+                                <br />
+                                de nuestro
+                                <br />
+                                contenido!</i>
+                            </h4>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
-        <!--Mapa-->
-        <section id="mapa_contenedor" class="page-section" >
-            <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.0560549372226!2d-79.90168148473069!3d-2.1321552877363645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d6a9e01c2b7%3A0xd897090d148b298f!2sAlborada%20XI%20Etapa%2C%20Guayaquil!5e0!3m2!1ses!2sec!4v1605389577049!5m2!1ses!2sec"  frameborder="0"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </section>
-        <!-- Footer-->
+
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left"></div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="fa fa-facebook"></a>
-                        <a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="fa fa-instagram"></a>
-                        <a href="#" target="_BLANK" class="fa fa-whatsapp"></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/Susbocaditos" target="_BLANK"><i class="fab fa-facebook-f"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!"></a>
@@ -96,7 +120,7 @@
                 </div>
             </div>
         </footer>
-       
+
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
