--- a/contacto.html
+++ b/contacto.html
@@ -77,7 +77,7 @@
         </section>
         <!--Mapa-->
         <section id="mapa_contenedor" class="page-section" >
-            <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.0560549372226!2d-79.90168148473069!3d-2.1321552877363645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d6a9e01c2b7%3A0xd897090d148b298f!2sAlborada%20XI%20Etapa%2C%20Guayaquil!5e0!3m2!1ses!2sec!4v1605389577049!5m2!1ses!2sec"  frameborder="0"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1993.5260710011985!2d-79.89874524421953!3d-2.133665098444664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d43030dd60f%3A0xc692fabc9c4af35a!2sBG%20Bocaditos!5e0!3m2!1ses-419!2sec!4v1605401716444!5m2!1ses-419!2sec" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
