--- a/principal.html
+++ b/principal.html
@@ -7,8 +7,8 @@
         <meta name="author" content="Odalys Guzman" />
         <title>BGBocaditos</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+       <!-- Font Awesome icons (free version)-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -158,8 +158,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left"></div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/Susbocaditos" target="_BLANK"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="fa fa-facebook"></a>
+                        <a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="fa fa-instagram"></a>
+                        <a href="#" target="_BLANK" class="fa fa-whatsapp"></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!"></a>
