--- a/quienessomos.html
+++ b/quienessomos.html
@@ -105,13 +105,14 @@
             </div>
         </section>
 
-        <footer class="footer py-4">
+      <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left"></div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/Susbocaditos" target="_BLANK"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/Susbocaditos" target="_BLANK" class="fa fa-facebook"></a>
+                        <a href="https://www.instagram.com/bgbocaditos/?hl=es-la" target="_BLANK" class="fa fa-instagram"></a>
+                        <a href="#" target="_BLANK" class="fa fa-whatsapp"></a>
                     </div>
                     <div class="col-lg-4 text-lg-right">
                         <a class="mr-3" href="#!"></a>
