--- a/quienessomos.html
+++ b/quienessomos.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Quiénes somos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Somos una empresa dedicada a deleitar tu paladar, nos dedicamos a hacer productos artesalanes de alta calidad y siempre nos ajustamos a tus gustos.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
