cambios en recetas y tutoriales

--- a/recetas.html
+++ b/recetas.html
@@ -44,6 +44,11 @@
                     <h2 class="section-heading text-uppercase">Recetas</h2>
                     <h3 class="section-subheading text-muted">En esta seccion encontraras como hacer deliciosas y divertidas recetas</h3>
                 </div>
+
+                <div class="col-12 mt-2">
+                    <input type="text" id="myInput" onkeyup="filtrarRecetas()" placeholder="Buscar por recetas" title="Ingresa un texto">
+                </div>
+
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
@@ -217,6 +222,8 @@
                 </div>
             </div>
         </footer>
+    <script src="recetas.js"></script>
+    
         
     </body>
 </html>
