--- a/tutoriales.html
+++ b/tutoriales.html
@@ -44,6 +44,11 @@
                     <h2 class="section-heading text-uppercase">Tutoriales</h2>
                     <h3 class="section-subheading text-muted">En esta seccion encontraras como hacer paso a paso tus recetas favoritas</h3>
                 </div>
+
+                <div class="col-12 mt-2">
+                    <input type="text" id="myInput" onkeyup="filtrarRecetas()" placeholder="Buscar videos" title="Ingresa un texto">
+                </div>
+                
                 <div class="row">
 
 
@@ -128,6 +133,8 @@
                 </div>
             </div>
         </footer>
+
+    <script src="recetas.js"></script>
 
 
 
